--- a/app/css/app.css
+++ b/app/css/app.css
@@ -30,6 +30,7 @@ body.dark {
 html,
 body {
     width: 100%;
+    height:100%;
     font-family: 'Kanit', sans-serif !important;
     background-color: var(--bg-white) !important;
     user-select: none;
